@@ -1,3 +1,10 @@
+2006-01-15  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	PR target/25168
+	* tree.c (get_file_function_name_long): Concatenate the first global
+	object name with a string derived from the input filename of the object
+	for type "F".
+
 2006-01-16  Ben Elliston  <bje@au.ibm.com>
 
 	* config/i386/winnt-stubs.c: Update FSF address.
